# libal

./: .cproject  .project  CMakeLists.txt  LICENSE  README.md  codecov.yml
.github/workflows/: build_and_test.yml
include/libal/: dict.h  flexible_array.h  hash_table.h  linked_list.h  pub.h
src/: al_pub.h  dict.c  dict.h  flexible_array.c  flexible_array.h  hash_table.c  hash_table.h  linked_list.c  linked_list.h  tree.c  tree.h
tests/: CMakeLists.txt  test_dict.c  test_flexible_array.c  test_hash_table.c  test_linked_list.c  test_tree.c
